Add support transaction in CL and ServiceTemplate Providers
Add support transaction
in ControlLoopProvider and ServiceTemplateProvider

Issue-ID: POLICY-3798
Change-Id: I0ab79f28231e329e06c16e01427775077b3ac994
Signed-off-by: FrancescoFioraEst <francesco.fiora@est.tech>